--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Vzs</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+    <%= yield(:head) %>
+  </head>
+  <body>
+    <div id="container">
+		<h1><%= link_to 'Vodní záchranná služba Českého červeného kříže - Místní skupina Třebíč', root_path %></h1>
+		<div id="user_nav">
+			<% if current_user %>
+				<%= link_to 'Upravit profil', edit_user_path(current_user) %>
+				<%= link_to "Odhlásit", logout_path %>
+			<% else %>
+				<%= link_to "Přihlásit", login_path %>
+				<%= link_to "Registrovat", new_user_path %>
+			<% end %>
+		</div>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+      <%= content_tag :h1, yield(:title) if show_title? %>
+      <%= yield %>
+    </div>
+  </body>
 </html>
