--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
+	<!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
+	<!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
