pridan model clanku a odkaz na uvodni strance

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,4 +1,8 @@
 
-Vitejte na strankach VZS.
+<div>Vitejte na strankach VZS.</div>
+
+<ul>
+	<li><%= link_to 'Seznam článků', articles_path %></li>
+</ul>
 
 
