--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,7 @@
 		<%= f.input :login, :label => 'Přihlašovací jméno' %>
 		<%= f.input :password, :label => 'Heslo' %>
 		<%= f.input :password_confirmation, :label => 'Potvrzení hesla' %>
+		<%= f.input :group, :label => 'Skupina' %>
 	<% end %>
 	<%= f.buttons do %>
 		<%= f.commit_button :label => @user.id.nil? ? 'Registrovat' : 'Uložit'  %>
