--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,11 +11,13 @@
       <td><%= article.title %></td>
       <td><%= article.user.login %></td>
       <td><%= article.group.name %></td>
-      <td><%= link_to "Zobrazit", article %></td>
-      <td><%= link_to "Upravit", edit_article_path(article) %></td>
-      <td><%= link_to "Smazat", article, :confirm => 'Opravdu odstranit článek '+article.title+'?', :method => :delete %></td>
+      <% if can? :read, article %><td><%= link_to "Zobrazit", article %></td><% end %>
+      <% if can? :update, article %><td><%= link_to "Upravit", edit_article_path(article) %></td><% end %>
+      <% if can? :destroy, article %><td><%= link_to "Smazat", article, :confirm => 'Opravdu odstranit článek '+article.title+'?', :method => :delete %></td><% end %>
     </tr>
   <% end %>
 </table>
 
+<% if can? :create, Article %>
 <p><%= link_to "Nový článek", new_article_path %></p>
+<% end %>
