--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,20 +1,17 @@
-<% title "Article" %>
+<% title @article.title %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-<p>
-  <strong>Content:</strong>
+<div>
+  <em>Autor:</em> <%= @article.user.login %><br />
+  <em>Min. požadované oprávnění:</em> <%= @article.group.name %><br />
+</div>
+<div style="border:1px dashed gray;margin:1em 0em 1em 0em;color:#555;padding:1em;line-spacing:3px;">
   <%= @article.content %>
-</p>
-<p>
-  <strong>User:</strong>
-  <%= @article.user_id %>
-</p>
+</div>
 
 <p>
-  <%= link_to "Edit", edit_article_path(@article) %> |
-  <%= link_to "Destroy", @article, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", articles_path %>
+  <% if can? :edit, @article %>
+  <%= link_to "Upravit", edit_article_path(@article) %> |
+  <%= link_to "Smazat", @article, :confirm => 'Opravdu odstranit tento článek?', :method => :delete %> |
+  <% end %>
+  <%= link_to "Výpis všech článků", articles_path %>
 </p>
