+ users_controller pridan build formulare + user_model pridana zavislost profilu na uzivately v pripade smazani uzivatele + migrace pro sloupec user_id v tabulce profile ( kvuli propojeni profilu s uzivatelem )a + do formulare pro editaci uzivatele pridana policka pro upravu profilu

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,8 @@
 		<%= f.input :login, :label => 'Přihlašovací jméno' %>
 		<%= f.input :password, :label => 'Heslo' %>
 		<%= f.input :password_confirmation, :label => 'Potvrzení hesla' %>
-		<%= f.input :group, :label => 'Skupina' %>
+    <%= f.input :group, :label => 'Skupina' %>
+    <%= f.inputs :first_name, :second_name, :street, :postal_code, :city, :telephone, :email, :im_jabber, :for => :profile%>
 	<% end %>
 	<%= f.buttons do %>
 		<%= f.commit_button :label => @user.id.nil? ? 'Registrovat' : 'Uložit'  %>
