--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @profile do |f| %>
+<%= semantic_form_for @profile do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :first_name %><br />
