+ validace nekterych polozek profilu   = validace vyzadovana pri update !?!

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
       <%= p.input :im_jabber, :label => "IM Jabber" %>
       <%= p.input :street, :label => "Ulice" %>
       <%= p.input :house_number, :label => "č.p." %>
-      <%= p.input :postal_code, :label => "PSč" %>
+      <%= p.input :postal_code, :label => "PSČ" %>
       <%= p.input :city, :label => "Město" %>
     <% end %>
 	<% end %>
