pridany udaje rodne cislo a datum narozeni
+ migrace na pridani hodnot rodne cislo a datum narozeni
+ do formulare pridany polozky rodne cislo a datum narozeni
+ pro cleny pridana validace povinnych polozek rodne cislo a datum narozeni

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,8 @@
       <%= p.input :house_number, :label => "č.p." %>
       <%= p.input :postal_code, :label => "PSČ" %>
       <%= p.input :city, :label => "Město" %>
+      <%= p.input :birthdate, :label => "Datum narození" %>
+      <%= p.input :birthnumber, :label => "Rodné číslo" %>
     <% end %>
   <% end %>
 	<%= f.buttons do %>
