--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,7 +17,7 @@
 </p>
 
 <div class="comments">
-  <h3>Komentáře:</h3>
+  <h3 id="comments">Komentáře:</h3>
   <% if @article.comments.empty? %>
     Zatím nejsou žádné komentáře k tomuto článku - Váš může být první.
   <% else %>
