komentare jsou nyni jako nested resource pod clanky

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,8 +3,8 @@
       <strong class="user"><%= comment.user.login %></strong>
       <em class="date"><%= comment.created_at %></em>
       <% if can? :manage, comment %>
-      <%= link_to "Upravit", edit_comment_path(comment) %>
-      <%= link_to "Odstranit", comment, :confirm => 'Opravdu komentář "'+comment.message+'"?', :method => :delete %>
+      <%= link_to "Upravit", edit_article_comment_path(comment.article, comment) %>
+      <%= link_to "Odstranit", article_comment_path(comment.article, comment), :confirm => 'Opravdu komentář "'+comment.message+'"?', :method => :delete %>
       <% end %>
       <div class="message">
         <%= comment.message %>
