--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,7 @@
-<%= semantic_form_for @comment do |f| %>
+<%= semantic_form_for [@comment.article, @comment] do |f| %>
 	<%= f.semantic_errors %>
 	<%= f.inputs do %>
     <%= f.input :message, :label => 'Váš komentář:' %>
-    <%= f.input :article_id, :as => :hidden %>
   <% end %>
 	<%= f.buttons %>
 <% end %>
