--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,40 +1,10 @@
-<%= semantic_form_for @profile do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </p>
-  <p>
-    <%= f.label :second_name %><br />
-    <%= f.text_field :second_name %>
-  </p>
-  <p>
-    <%= f.label :street %><br />
-    <%= f.text_field :street %>
-  </p>
-  <p>
-    <%= f.label :house_number %><br />
-    <%= f.text_field :house_number %>
-  </p>
-  <p>
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </p>
-  <p>
-    <%= f.label :postal_code %><br />
-    <%= f.number_field :postal_code %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :telephone %><br />
-    <%= f.text_field :telephone %>
-  </p>
-  <p>
-    <%= f.label :im_jabber %><br />
-    <%= f.text_field :im_jabber %>
-  </p>
-  <p><%= f.submit %></p>
+<%= f.semantic_fields_for :profile do |p| %>
+  <%= p.input :first_name, :label => "Křestní jméno" %>
+  <%= p.input :second_name, :label => "Příjmení" %>
+  <%= p.input :email, :label => "Email" %>
+  <%= p.input :telephone, :label => "Telefonní číslo" %>
+  <%= p.input :im_jabber, :label => "IM Jabber" %>
+  <%= p.input :birthdate, :as => :date, :label => "Datum narození", :start_year => Time.now.year-100 %>
+  <%= p.input :birthnumber, :label => "Rodné číslo" %>
+  <%= render 'addresses/form', :f => p %>
 <% end %>
