--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,21 +4,7 @@
 		<%= f.input :password, :label => 'Heslo' %>
 		<%= f.input :password_confirmation, :label => 'Potvrzení hesla' %>
     <%= f.input :group, :label => 'Skupina' %>
-    <%= f.semantic_fields_for :profile do |p| %>
-      <%= p.input :first_name, :label => "Křestní jméno" %>
-      <%= p.input :second_name, :label => "Příjmení" %>
-      <%= p.input :email, :label => "Email" %>
-      <%= p.input :telephone, :label => "Telefonní číslo" %>
-      <%= p.input :im_jabber, :label => "IM Jabber" %>
-      <%= p.input :birthdate, :as => :date, :label => "Datum narození", :start_year => Time.now.year-100 %>
-      <%= p.input :birthnumber, :label => "Rodné číslo" %>
-      <%= p.semantic_fields_for :address do |a| %>
-        <%= a.input :street, :label => "Ulice" %>
-        <%= a.input :house_number, :label => "Číslo popisné" %>
-        <%= a.input :city, :label => "Město" %>
-        <%= a.input :postcode, :label => "PSČ" %>
-      <% end %>
-    <% end %>
+    <%= render 'profiles/form', :f=>f %>
   <% end %>
 	<%= f.buttons do %>
 		<%= f.commit_button :label => @user.id.nil? ? 'Registrovat' : 'Uložit'  %>
