nefunkcni pokus o napraveni vztahu vytvorenych user/profile/address objektu

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,3 +10,8 @@
 		<%= f.commit_button :label => @user.id.nil? ? 'Registrovat' : 'Uložit'  %>
 	<% end %>
 <% end %>
+<hr />
+<%= @user.errors %>
+<hr />
+<%= @user.errors.inspect %>
+<hr />
