--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -3,6 +3,9 @@
 
 <ul>
 	<li><%= link_to 'Seznam článků', articles_path %></li>
+    <% if can? :read_members, Profile %>
+      <li><%= link_to 'Seznam členů VZS', members_path %></li>
+    <% end %>
 </ul>
 
 
