[#26492509] pridan a snad i spravne aplikovan zaklad bootstrapu

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,8 +1,8 @@
 
-<div>Vitejte na strankach VZS.</div>
+<div class="hero-unit">
+  <h2>Vodní záchranná služba Českého červeného kříže<span class="invisible"> - </span><span class="subtitle">Místní skupina Třebíč</span></h2>
+</div>
 
-<ul>
-	<li><%= link_to 'Seznam článků', articles_path %></li>
-</ul>
+
 
 
