graficke predelani prvni stranky

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,14 +1,25 @@
-
+<div class="page-header">
+  <h1>
+    <%= image_tag "logo_vzs.gif", :size => "50x50"%>
+    Vodní záchranná služba ČČK <small>MS Třebíč</small>
+  </h1>
+</div>
 <div class="hero-unit">
-  <h2>Vodní záchranná služba Českého červeného kříže<span class="invisible"> - </span><span class="subtitle">Místní skupina Třebíč</span></h2>
+  <h1><%=@articles.first.try(:title)%></h1>
+  <p><%= @articles.first.try(:content).truncate(150) %> </p>
+  <p>
+  <%= link_to 'Více  »', @articles.first, :class =>  "btn btn-primary btn-large" %>
+  <p>
 </div>
 
+<div class="row-fluid">
 <% @articles.each do |article| %>
-  <div>
-    <strong><%= link_to article.title, article %></strong> ~ <%= full_name(article.user) %><br />
-    <div>
-      <em><%= article.content[0,50] %>...</em>
-      <%= link_to 'Více', article %>
-    </div>
+  <div class=span4>
+    <h2><%= link_to article.title, article %></h2>
+      <p><%= article.content.truncate(150) %></p>
+      <p>
+        <%= link_to 'Více »', article, :class =>  "btn" %>
+      </p>
   </div>
 <% end %>
+</div>
