preformatovani vypisu vsech clanku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <%= link_to 'VZS Třebíč', root_path, :class => 'brand' %>
+          <%= link_to 'VZS ČČK Třebíč', root_path, :class => 'brand' %>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <% if current_user %>
@@ -48,7 +48,7 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3">
+        <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Menu</li>
