--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,14 @@
 <% title "Články" %>
 
 <% if can? :create, Article %>
-  <p class="pull-right">
-    <%= link_to new_article_path, :class => "btn btn-large btn-primary" do %>
+    <%= link_to new_article_path, :class => "btn btn-large btn-primary pull-right" do %>
       <i class="icon-pencil icon-white"></i> Nový článek
     <% end %>
-  </p>
 <% end %>
-
+<br />
 <div class=row-fluid">
   <% @articles.each do |article| %>
-    <div class=span10>
+    <div class=span5>
       <h2><%= article.title %>
         <%= link_to article_path(article, :anchor => 'comments'), :class => "badge badge-info" do %>
           <%=article.comments.count%>
@@ -18,7 +16,7 @@
         <% end %>
       </h2>
       <p><em><%= article.user.profile.full_name %> <%= l article.created_at, :format => :long %></em></p>
-      <p><%= article.content.truncate(300) %></p>
+      <p><%= simple_format article.content.truncate(300) %></p>
       <div class="btn-group pull-right">
         <% if can? :read, article %>
           <%= link_to article, :class => "btn btn-primary" do %>
@@ -31,9 +29,9 @@
           <% end %>
         <% end %>
         <% if can? :destroy, article %>
-        <%= link_to article, :confirm => 'Opravdu odstranit článek '+article.title+'?', :method => :delete, :class => "btn btn-danger" do %>
-        <i class="icon-trash"></i> Smazat
-        <% end %>
+          <%= link_to article, :confirm => 'Opravdu odstranit článek '+article.title+'?', :method => :delete, :class => "btn btn-danger" do %>
+            <i class="icon-trash"></i> Smazat
+          <% end %>
         <% end %>
       </div>
     </div>
