--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,8 @@
 <% title @article.title %>
-<%= link_to "Výpis všech článků", articles_path, :class => "btn pull-right btn-primary" %>
+<%= link_to articles_path, :class => "btn pull-right btn-primary btn-large" do %>
+<i class="icon-arrow-left icon-white"></i> Výpis všech článků
+<%end %>
+
 <div class="span12">
 <div>
   <em>Autor:</em> <%= @article.user.profile.full_name %><br />
