--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           </a>
           <%= link_to 'VZS ČČK Třebíč', root_path, :class => 'brand' %>
           <div class="container-fluid nav-collapse">
-            <ul class="nav">
+            <ul class="nav pull-right">
               <% if current_user %>
                 <li><%= link_to full_name(current_user), edit_user_path(current_user), :title => 'Upravit profil' %></li>
                 <li><%= link_to "Odhlásit", logout_path %></li>
@@ -49,20 +49,30 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Menu</li>
-	            <li><%= link_to 'Úvodní stránka', root_path %></li>
-                <% if can? :create, Article %>
-                  <li><%= link_to 'Správa článků', articles_path %></li>
-                <% end %>
-                <% if can? :read_members, Profile %>
-                  <li><%= link_to 'Seznam členů VZS', members_path %></li>
-                <% end %>
-            </ul>
-          </div><!--/.well -->
+          <div class="row show-grid">
+            <div class="span2">
+              <%= image_tag "logo_vzs.gif", :size => "150x150", :class => "span2" %>
+            </div>
+          </div>
+          <div class="row spacer">
+            <div class="span2"><br /></div>
+          </div>
+          <div class="row">
+            <div class="well sidebar-nav">
+              <ul class="nav nav-list">
+                <li class="nav-header">Menu</li>
+                <li><%= link_to 'Úvodní stránka', root_path %></li>
+                  <% if can? :create, Article %>
+                    <li><%= link_to 'Správa článků', articles_path %></li>
+                  <% end %>
+                  <% if can? :read_members, Profile %>
+                    <li><%= link_to 'Seznam členů VZS', members_path %></li>
+                  <% end %>
+              </ul>
+            </div><!--/.well -->
+          </div>
         </div><!--/span-->
-        <div class="span9">
+        <div class="span10">
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
         <% end %>
