--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -1,14 +1,9 @@
-
-<div class="person">
-  <div class="name">
-    <%= profile.first_name %>
-    <%= profile.second_name %>
-  </div>
-  <div class="age">
-    <%= profile.user_age %> let
-  </div>
-  <div class="mail">
-    <%= profile.email %>
-  </div>
-</div>
-
+<tr>
+  <td><%= profile.full_name %></td>
+  <td><%= profile.user_age%></td>
+  <td><%= profile.email %></td>
+  <td>
+    <%= link_to "#", :class => "btn" do %>
+      <i class="icon-search"></i> Zobrazit
+    <% end %>
+</tr>
