--- a/app/views/profiles/list.html.erb
+++ b/app/views/profiles/list.html.erb
@@ -1,13 +1,25 @@
 <% title "Seznam členů" %>
 
 <div class="personList">
-<% @profiles.each do |group_key,group| %>
-  <h2><%=t group_key, :scope => :user_groups %></h2>
-  <% group.each do |age_key, age_group| %>
-    <h3><%=t age_key, :scope => :user_groups %></h3>
-    <% age_group.each do |p| %>
-      <%= render 'profiles/list_person', :profile => p %>
+  <% @profiles.each do |group_key,group| %>
+    <h2><%=t group_key, :scope => :user_groups %></h2>
+    <% group.each do |age_key, age_group| %>
+      <h3><%=t age_key, :scope => :user_groups %></h3>
+      <% age_group.each do |profile| %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Jméno</th>
+              <th>Věk</th>
+              <th>E-mail</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <%= render 'profiles/list_person', :profile => profile %>
+          </tbody>
+        </table>
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
 </div>
