--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,5 +7,7 @@
       <%= f.input :commentable %>
       <%= f.input :group, :as => :select, :collection => group_names, :label => 'Skupina', :include_blank => false %>
     <% end %>
-	<%= f.buttons %>
+    <%= f.actions do %>
+      <%= f.action :submit, :as => :button, :button_html => { :class => 'btn btn-success' } %>
+    <% end %>
 <% end %>
