--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,8 +1,7 @@
 <% title "Edit Article" %>
+<%= link_to articles_path, :class => ['btn', 'pull-right', 'btn-primary', 'btn-large'] do %>
+  <i class="icon-arrow-left icon-white"></i> Výpis všech článků
+<% end %>
 
 <%= render 'form' %>
 
-<p>
-  <%= link_to "Show", @article %> |
-  <%= link_to "View All", articles_path %>
-</p>
