--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
 <% title "New Article" %>
+<%= link_to articles_path, :class => ['btn', 'pull-right', 'btn-primary', 'btn-large'] do %>
+  <i class="icon-arrow-left icon-white"></i> Výpis všech článků
+<% end %>
 
 <%= render 'form' %>
 
-<p><%= link_to "Back to List", articles_path %></p>
