--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -4,7 +4,9 @@
   <%= p.input :email, :label => "Email" %>
   <%= p.input :telephone, :label => "Telefonní číslo" %>
   <%= p.input :im_jabber, :label => "IM Jabber" %>
-  <%= p.input :birthdate, :as => :date, :label => "Datum narození", :start_year => Time.now.year-100 %>
-  <%= p.input :birthnumber, :label => "Rodné číslo" %>
-  <%= render 'addresses/form', :f => p %>
+  <% if can? :update, @user.profile %>
+    <%= p.input :birthdate, :as => :date, :label => "Datum narození", :start_year => Time.now.year-100 %>
+    <%= p.input :birthnumber, :label => "Rodné číslo" %>
+    <%= render 'addresses/form', :f => p %>
+  <% end %>
 <% end %>
