--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,9 @@
 		<%= f.input :login, :label => 'Přihlašovací jméno' %>
 		<%= f.input :password, :label => 'Heslo' %>
 		<%= f.input :password_confirmation, :label => 'Potvrzení hesla' %>
-        <%= f.input :group, :as => :select, :collection => group_names, :label => 'Skupina' %>
+        <% if can? :manage, User %>
+          <%= f.input :group, :as => :select, :collection => group_names, :label => 'Skupina' %>
+        <% end %>
     <%= render 'profiles/form', :f=>f %>
   <% end %>
 	<%= f.buttons do %>
