--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -4,7 +4,7 @@
     <% if can? :create, Article %>
       <li><%= link_to 'Správa článků', articles_path %></li>
     <% end %>
-    <% if can? :read_members, Profile %>
+    <% if can? :read_members, User %>
       <li><%= link_to 'Seznam členů VZS', members_path %></li>
     <% end %>
 </ul>
