--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,25 @@
-<% title "Users" %>
+<% title "Seznam členů" %>
 
-<table>
-  <tr>
-    <th>Login</th>
-    <th>Password</th>
-  </tr>
-  <% for user in @users %>
-    <tr>
-      <td><%= user.login %></td>
-      <td><%= user.password %></td>
-      <td><%= link_to "Show", user %></td>
-      <td><%= link_to "Edit", edit_user_path(user) %></td>
-      <td><%= link_to "Destroy", user, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
+<div class="personList">
+  <% @users.each do |group_key,group| %>
+    <h2><%=t group_key, :scope => :user_groups %></h2>
+    <% group.each do |age_key, age_group| %>
+      <h3><%=t age_key, :scope => :user_groups %></h3>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Jméno</th>
+              <th>Věk</th>
+              <th>E-mail</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+      <% age_group.each do |user| %>
+            <%= render 'profiles/list_person', :profile => user.profile %>
+      <% end %>
+          </tbody>
+        </table>
+    <% end %>
   <% end %>
-</table>
-
-<p><%= link_to "New User", new_user_path %></p>
+</div>
