--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -3,7 +3,7 @@
   <td><%= profile.user_age%></td>
   <td><%= profile.email %></td>
   <td>
-    <%= link_to "#", :class => "btn" do %>
+    <%= link_to profile.user, :class => "btn" do %>
       <i class="icon-search"></i> Zobrazit
     <% end %>
 </tr>
