--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,31 @@
 <% title "User" %>
+<% if can? :read_members, User %>
+  <%= link_to users_path, :class => "btn pull-right btn-primary btn-large" do %>
+  <i class="icon-arrow-left icon-white"></i> Seznam členů
+  <%end %>
+<% end %>
 
-<p>
-  <strong>Login:</strong>
-  <%= @user.login %>
-</p>
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
-<p>
-  <strong>Věk uživatele</strong>
-  <%= @user.profile.user_age || "Nezadán"%>
-<p>
-  <%= link_to "Edit", edit_user_path(@user) %> |
-  <%= link_to "Destroy", @user, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", users_path %>
-</p>
+<table class="table">
+  <tr>
+  <th><%=t 'user.attr.login' %>:</th>
+  <td><%= @user.login %></td>
 
+  <%= render @user.profile %>
+
+</table>
+
+<div class="btn-group pull-right">
+  <% if can? :edit, @user %>
+    <%= link_to edit_user_path(@user), :class => "btn" do %>
+      <i class="icon-edit"></i> <%=t 'btn.edit' %>
+    <% end %>
+  <% end %>
+
+  <% if can? :destroy, @user %>
+    <%= link_to @user, 
+      :confirm => 'Opravdu odstranit uživatele ' + @user.profile.full_name + '?',
+      :method => :delete, :class => "btn btn-danger" do %>
+        <i class="icon-trash"></i> <%=t 'btn.delete' %>
+    <% end %>
+  <% end %>
+</div>
