--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -18,4 +18,14 @@
   <th><%=t 'user.attr.age' %></th>
   <td><%= profile.user_age || t('user.attr.age_empty') %></td>
 </tr>
-
+<% if can? :update_extended, @user.profile %>
+  <tr>
+    <th><%=t 'user.attr.birthdate' %></th>
+    <td><%= profile.birthdate %></td>
+  </tr>
+  <tr>
+    <th><%=t 'user.attr.birthnumber' %></th>
+    <td><%= profile.birthnumber %></td>
+  </tr>
+  <%= render profile.address %>
+<% end %>
