--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% title "User" %>
+<% title @user.profile.full_name %>
 <% if can? :read_members, User %>
   <%= link_to users_path, :class => "btn pull-right btn-primary btn-large" do %>
   <i class="icon-arrow-left icon-white"></i> Seznam členů
