--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,17 +15,5 @@
 </table>
 
 <div class="btn-group pull-right">
-  <% if can? :edit, @user %>
-    <%= link_to edit_user_path(@user), :class => "btn" do %>
-      <i class="icon-edit"></i> <%=t 'btn.edit' %>
-    <% end %>
-  <% end %>
-
-  <% if can? :destroy, @user %>
-    <%= link_to @user, 
-      :confirm => 'Opravdu odstranit uživatele ' + @user.profile.full_name + '?',
-      :method => :delete, :class => "btn btn-danger" do %>
-        <i class="icon-trash"></i> <%=t 'btn.delete' %>
-    <% end %>
-  <% end %>
+  <%= render 'change_buttons', :user => @user %>
 </div>
