--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,16 +5,20 @@
 
 <ul class="nav pull-right">
   <% if current_user %>
-    <li><%= link_to full_name(current_user), edit_user_path(current_user), :title => 'Upravit profil' %></li>
-    <li>
-      <%= link_to logout_path do %>
-        Odhlásit
-      <% end %>
+    <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <%= full_name(current_user) %>
+        <b class="caret"></b>
+      </a>
+      <ul class="dropdown-menu">
+        <li><%= link_to t('btn.edit_profile'), edit_user_path(current_user) %></li>
+        <li><%= link_to t('btn.logout'), logout_path %></li>
+      </ul>
     </li>
 
   <% else %>
-    <li><%= link_to "Přihlásit", login_path %></li>
-    <li><%= link_to "Registrovat", register_path %></li>
+    <li><%= link_to t('btn.login'), login_path %></li>
+    <li><%= link_to t('btn.register'), register_path %></li>
   <% end %>
 </ul> <!--/.nav pullright -->
 
