full_name helper zmenen ma User#full_name a doplneny jeho testy

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,7 +17,7 @@
       </h2>
       <p>
       <em>
-        <%= article.user.profile.full_name %>
+        <%= article.user.full_name %>
         <%= l article.created_at, :format => :long %>
       </em>
       </p>
