--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="row-fluid span12">
   <div>
-    <em>Autor:</em> <%= @article.user.profile.full_name %><br />
+    <em>Autor:</em> <%= @article.user.full_name %><br />
     <em>Min. požadované oprávnění:</em> <%= group_name(@article.group) %><br />
   </div>
   <div>
