--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
   <% if current_user %>
     <li class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <%= full_name(current_user) %>
+        <%= current_user.full_name %>
         <b class="caret"></b>
       </a>
       <ul class="dropdown-menu">
