--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= profile.full_name %></td>
+  <td><%= profile.user.full_name %></td>
   <td><%= profile.email %></td>
   <td><%= profile.user_age%></td>
   <td><%= group_name(profile.user.group) %></td>
